tests/ui/coroutine/delayed-obligations-emit.next.stderr
error[E0275]: overflow evaluating the requirement `{async block@$DIR/delayed-obligations-emit.rs:17:11: 17:16}: Send`
  --> $DIR/delayed-obligations-emit.rs:17:5
   |
LL |     spawn(async { build_dependencies().await });
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`delayed_obligations_emit`)
note: required by a bound in `spawn`
  --> $DIR/delayed-obligations-emit.rs:31:13
   |
LL | fn spawn<F: Send>(_: F) {}
   |             ^^^^ required by this bound in `spawn`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
